# re-telco

./: .gitignore  README.md  main.py  pyproject.toml
src/core/channel/: awgn.py  profiles.py  static_multipath.py
src/core/coding/: convolutional.py  interleaver.py  soft_viterbi.py  viterbi.py
src/core/metrics/: communication_metrics.py
src/core/modulation/: qpsk.py
src/core/ofdm/: config.py  demodulator.py  modulator.py  resource_grid.py
src/core/receiver/: equalizer.py
src/core/source/: bit_framing.py  text_codec.py
src/core/system/: config.py
src/core/system/phase1/: phase1_ber_curve.py  phase1_constellation.py  phase1_simulator.py
src/core/system/phase2/: phase2_ber_curve.py  phase2_constellation.py  phase2_ofdm_loopback.py  phase2_simulator.py  simulation_models.py
src/core/system/phase3/: phase3_ber_curve.py  phase3_plots.py  phase3_simulator.py  run_phase3a.py  run_phase3b.py  simulation_models.py
src/core/system/phase4/: phase4a_coding_loopback.py  phase4b_ber_curve.py  phase4b_coded_qpsk_awgn.py  phase4b_runner.py  phase4c_ber_curve.py  phase4c_coded_ofdm.py  phase4c_runner.py  simulation_models.py
src/exception/: exception.py
src/logging/: logging.py
src/ml/datasets/: coded_llr_datasets.py
src/ml/evaluation/: compare_decoders.py  evaluation_models.py  mc_trial.py  runner.py  text_decoder_comparison.py
src/ml/models/: neural_decoder.py  service.py
src/ml/training/: train_neural_decoder.py
