[project]
name = "digital-comms"
version = "0.1.0"
description = "Reverse engineering of telecommunication systems physical layer in Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pyside6>=6.11.1",
    "scipy>=1.17.1",
]
