[project]
name = "digital-comms"
version = "0.1.0"
description = "Reverse engineering of telecommunication systems physical layer in Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pyside6>=6.11.1",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]

[tool.ruff]
line-length = 88
target-version = "py311"